--- a/package.json
+++ b/package.json
@@ -12,12 +12,12 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/cli": "~7.1.3",
-    "@angular/compiler-cli": "~7.1.0",
     "@angular/animations": "^7.1.4",
     "@angular/cdk": "^7.3.4",
+    "@angular/cli": "~7.1.3",
     "@angular/common": "~7.1.0",
     "@angular/compiler": "~7.1.0",
+    "@angular/compiler-cli": "~7.1.0",
     "@angular/core": "~7.1.0",
     "@angular/forms": "~7.1.0",
     "@angular/material": "^7.3.4",
@@ -26,10 +26,11 @@
     "@angular/router": "~7.1.0",
     "angular-image-slider": "0.0.8",
     "core-js": "^2.5.4",
+    "ngx-slick": "^0.2.1",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
-    "zone.js": "~0.8.26",
-    "typescript": "~3.1.6"
+    "typescript": "~3.1.6",
+    "zone.js": "~0.8.26"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.11.0",
