--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@angular/platform-browser": "~7.1.0",
     "@angular/platform-browser-dynamic": "~7.1.0",
     "@angular/router": "~7.1.0",
+    "@types/googlemaps": "^3.30.19",
     "angular-image-slider": "0.0.8",
     "core-js": "^2.5.4",
     "ngx-slick": "^0.2.1",
